--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   gap: ^2.0.0
   jiffy: ^5.0.0
   material_design_icons_flutter: ^5.0.6595
+  xid: ^1.0.7
 
 dev_dependencies:
   flutter_test:
