--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
   firebase_core: ^1.12.0
+  cloud_firestore: ^3.1.8
   font_awesome_flutter: ^9.2.0
   dots_indicator: ^2.1.0
   hexcolor: ^2.0.6
