--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   jiffy: ^5.0.0
   material_design_icons_flutter: ^5.0.6595
   xid: ^1.0.7
+  flutter_rounded_date_picker: ^2.0.2
+
 
 dev_dependencies:
   flutter_test:
