fixes + add new screen + permission of the app changed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   material_design_icons_flutter: ^5.0.6595
   xid: ^1.0.7
   flutter_rounded_date_picker: ^2.0.2
+  screenshot: ^1.2.3
+  image_gallery_saver: ^1.7.1
+  permission_handler: ^9.2.0
+
 
 
 dev_dependencies:
