--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,6 @@ dependencies:
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.8
   font_awesome_flutter: ^9.2.0
-  dots_indicator: ^2.1.0
-  hexcolor: ^2.0.6
   gap: ^2.0.0
   jiffy: ^5.0.0
   material_design_icons_flutter: ^5.0.6595
@@ -48,6 +46,8 @@ dependencies:
   screenshot: ^1.2.3
   image_gallery_saver: ^1.7.1
   permission_handler: ^9.2.0
+  smooth_page_indicator: ^1.0.0+2
+  shared_preferences: ^2.0.13
 
 
 
